--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/cardekco/public_html/
-    - /bin/cp -rn public/* $DEPLOYPATH
+    - /bin/cp -rn public/build $DEPLOYPATH
     
